--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "eslint-plugin-storybook": "^0.6.6",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
+    "node-sass": "^7.0.3",
+    "sass": "^1.56.0",
+    "sass-loader": "^13.1.0",
     "vue-loader": "^16.8.3"
   }
 }
